--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Controle Finaceiro</title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <h1>Controle de Finanças</h1>
@@ -23,5 +24,9 @@
         <p>Total Diário: <span id="DailySum"> R$ 0,00 </span> </p>
         <p>Total Geral: <span id="TotalSum"> R$ 0,00 </span> </p>
 
+
+
+        <script src="https://cdn.jsdelivr.net/npm/pouchdb@7.2.2/dist/pouchdb.min.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
