--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Controle Finaceiro</title>
         <link rel="stylesheet" href="styles.css"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     </head>
     <body>
         <h1>Controle de Finanças</h1>
-        <form id="RecordForm">
+        <form id="RecordForm" class="mb-4">
             <input type="text" id="Description" placeholder="Descrição" required />
             <input type="number" id="Value" placeholder="Valor" required />
-            <select id="Type"> 
+            <select id="Type" class="form-select"> 
                 <option value="Income">Receita</option>
                 <option value="Expense">Despesa</option>
             </select>
-            <button type="submit">Adicionar</button>
+            <button type="submit" class="btn btn-success w-50">Adicionar</button>
         </form>
         <h2>Lançamentos</h2>
-        <ul id="RecordsList"></ul>
+        <ul id="RecordsList" class="list-group mb-4"></ul>
 
         <h2>Totais</h2>
         <p>Total Diário: <span id="DailySum"> R$ 0,00 </span> </p>
@@ -27,6 +28,7 @@
 
 
         <script src="https://cdn.jsdelivr.net/npm/pouchdb@7.2.2/dist/pouchdb.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
